# supurgi-v5

./: .gitignore  README.md  SETUP.md  example_backtest.py  example_brokers.py  logging_config.py  main.py  orchestrator.py  requirements.txt  requirements_with_header.txt
trendstack/: README.md  config.yaml  pyproject.toml
trendstack/cores/backtest_core/: __init__.py  account.py  backtest_config.yaml  engine.py  position.py  results.py
trendstack/cores/data_core/: __init__.py  api.py  cleaner.py  config.py  config.yaml  costs.py  costs.yaml  data_core_test.py  ingestion.py  maintenance.py  manager.py  symbols.yaml  test_api.py
trendstack/cores/risk_core/: __init__.py  manager.py
trendstack/cores/services/: __init__.py  backtest_broker.py  broker_api.py  data_service.py  mt5_broker.py  time_service.py
trendstack/cores/signal_core/: __init__.py  __init___new.py  api.py  datatypes.py  example_usage.py  filters.py  generators.py  indicators.py  momentum.py  patterns.py  processors.py  registry.py  symbols.py  symbols.yaml
trendstack/cores/signal_core/tests/: __init__.py  test_momentum.py
